Fix line endings and add .gitattributes

--- a/studio-app/src/i18n/locales/ar.json
+++ b/studio-app/src/i18n/locales/ar.json
@@ -104,39 +104,63 @@
       "save": "حفظ",
       "cancel": "إلغاء"
     },
-    "feeStructures": {
-      "monthlyFee": "الرسوم الشهرية",
-      "monthlyFeePlaceholder": "أدخل قيمة الرسوم الشهرية...",
-      "title": "هيكل الرسوم الدراسية",
-      "addNewStructure": "إضافة هيكل رسوم جديد",
-      "academicYear": "السنة الدراسية",
-      "academicYearDescription": "حدد السنة الدراسية التي ينطبق عليها هيكل الرسوم.",
-      "grade": "الصف",
-      "fee": "الرسوم",
-      "actions": "الإجراءات",
-      "edit": "تعديل",
-      "delete": "حذف",
-      "save": "حفظ",
-      "cancel": "إلغاء",
-      "confirmDelete": "هل أنت متأكد من حذف هيكل الرسوم؟",
-      "success": "تم حفظ هيكل الرسوم بنجاح",
-      "error": "حدث خطأ أثناء حفظ هيكل الرسوم",
-      "addFeeStructure": "إضافة هيكل رسوم",
-      "amountMustBePositive": "يجب أن تكون القيمة موجبة",
-      "couldNotFetchStructures": "تعذر جلب هياكل الرسوم",
-      "defineMonthlyFee": "حدد قيمة الرسوم الشهرية لكل صف",
-      "editFeeStructure": "تعديل هيكل الرسوم",
-      "errorSavingStructure": "حدث خطأ أثناء حفظ هيكل الرسوم",
-      "errorUpdatingStructure": "حدث خطأ أثناء تحديث هيكل الرسوم",
-      "exampleAmount": "مثال: 1000",
-      "feeStructureSaved": "تم حفظ هيكل الرسوم",
-      "feeStructureSavedMessage": "تم حفظ هيكل الرسوم للصف {grade}",
-      "feeStructureUpdated": "تم تحديث هيكل الرسوم",
-      "monthlyAmountRequired": "مطلوب قيمة الرسوم الشهرية",
-      "monthlyFeeAmount": "المبلغ الشهري",
-      "newMonthlyFeeAmount": "المبلغ الشهري الجديد",
-      "noStructuresForYear": "لا توجد هياكل رسومية لهذه السنة",
-      "pleaseSelectGrade": "يرجى اختيار الصف",
+    "auth": {
+      "title": "تسجيل الدخول",
+      "subtitle": "أدخل بياناتك للوصول إلى لوحة التحكم",
+      "email": "البريد الإلكتروني",
+      "password": "كلمة المرور",
+      "login": "تسجيل الدخول",
+      "loggingIn": "جاري تسجيل الدخول...",
+      "loginFailed": "فشل تسجيل الدخول",
+      "loginSuccessful": "تم تسجيل الدخول بنجاح",
+      "welcomeBack": "مرحباً بعودتك!",
+      "invalidCredentials": "بيانات الدخول غير صحيحة",
+      "invalidLoginCredentials": "البريد الإلكتروني أو كلمة المرور غير صحيحة.",
+      "invalidEmail": "بريد إلكتروني غير صالح",
+      "userNotFound": "المستخدم غير موجود",
+      "wrongPassword": "كلمة المرور غير صحيحة",
+      "tooManyRequests": "محاولات كثيرة. يرجى المحاولة لاحقاً.",
+      "forgotPassword": "نسيت كلمة المرور؟",
+      "backToLogin": "العودة لتسجيل الدخول",
+      "sendReset": "إرسال رابط الاستعادة",
+      "sendingReset": "جاري إرسال الرابط...",
+      "resetEmailSentTitle": "تم إرسال رابط الاستعادة",
+      "resetEmailSentDesc": "تحقق من بريدك للحصول على الرابط.",
+      "resetFailed": "تعذر إرسال رابط الاستعادة",
+      "noAccount": "ليس لديك حساب؟",
+      "signup": "سجّل هنا",
+      "staffSignup": "إنشاء حساب موظف",
+      "staffSignupDescription": "قم بإنشاء حساب تسجيل دخول لموظف موجود في النظام",
+      "workEmail": "البريد الإلكتروني (المستخدم في السجلات)",
+      "emailMustMatch": "يجب أن يطابق البريد الإلكتروني المسجل في قاعدة بيانات الموظفين",
+      "newPassword": "كلمة المرور الجديدة",
+      "confirmPassword": "تأكيد كلمة المرور",
+      "createAccount": "إنشاء الحساب",
+      "creatingAccount": "جاري إنشاء الحساب...",
+      "alreadyHaveAccount": "لديك حساب بالفعل؟",
+      "error": "خطأ",
+      "fillAllFields": "يرجى ملء جميع الحقول.",
+      "passwordMismatch": "كلمات المرور غير متطابقة.",
+      "passwordTooShort": "كلمة المرور يجب أن تكون 6 أحرف على الأقل.",
+      "staffNotFound": "لم يتم العثور على موظف بهذا البريد الإلكتروني. يرجى الاتصال بالإدارة.",
+      "accountAlreadyExists": "لديك حساب بالفعل. يرجى تسجيل الدخول بدلاً من ذلك.",
+      "signupSuccessful": "تم إنشاء الحساب بنجاح",
+      "canNowLogin": "يمكنك الآن تسجيل الدخول باستخدام بياناتك.",
+      "signupFailed": "فشل إنشاء الحساب",
+      "emailInUse": "هذا البريد الإلكتروني مستخدم بالفعل. يرجى تسجيل الدخول.",
+      "weakPassword": "كلمة المرور ضعيفة جداً.",
+      "firebaseNotConfigured": "مصادقة Firebase غير مهيأة. يرجى التحقق من إعدادات البيئة.",
+      "staffProfileNotFound": "لم يتم العثور على ملف تعريف الموظف. يرجى الاتصال بالمسؤول.",
+      "warning": "تحذير",
+      "emailNotInDatabase": "البريد الإلكتروني غير موجود في قاعدة بيانات الموظفين. تأكد من إدخال البريد الصحيح.",
+      "staffNotAuthorized": "حسابك لم يتم تفعيله بعد. يرجى الاتصال بالإدارة.",
+      "parentLogin": "تسجيل دخول ولي الأمر",
+      "parentLoginDescription": "سجّل الدخول لعرض معلومات طلابك",
+      "signIn": "تسجيل الدخول",
+      "signingIn": "جارٍ تسجيل الدخول...",
+      "yourStudents": "طلابك"
+    },
+    "finance": {
       "saveChanges": "حفظ التغييرات",
       "saveStructure": "حفظ الهيكل",
       "selectGrade": "اختر الصف",
@@ -1173,51 +1197,6 @@
     "feeStructure": "هيكل الرسوم السنوي",
     "totalPaid": "الإجمالي المدفوع",
     "balance": "الرصيد"
-  },
-  "": {
-    "": " "
-  },
-  "a": "A",
-  "auth": {
-    "email": "Auth email",
-    "login": "Auth login",
-    "password": "Auth password",
-    "title": "Auth title",
-    "invalidCredentials": "بيانات اعتماد غير صحيحة",
-    "loggingIn": "جاري تسجيل الدخول...",
-    "loginFailed": "فشل تسجيل الدخول",
-    "loginSuccessful": "تم تسجيل الدخول بنجاح",
-    "noStudentsLinked": "لا يوجد طلاب مرتبطون",
-    "parentLogin": "تسجيل دخول ولي الأمر",
-    "parentLoginDescription": "سجّل الدخول لعرض معلومات طلابك",
-    "signIn": "تسجيل الدخول",
-    "signingIn": "جارٍ تسجيل الدخول...",
-    "yourStudents": "طلابك",
-    "invalidEmail": "بريد إلكتروني غير صالح",
-    "userNotFound": "المستخدم غير موجود",
-    "wrongPassword": "كلمة المرور غير صحيحة",
-    "forgotPassword": "نسيت كلمة المرور؟",
-    "backToLogin": "العودة لتسجيل الدخول",
-    "sendReset": "إرسال رابط الاستعادة",
-    "sendingReset": "جاري الإرسال...",
-    "resetEmailSentTitle": "تم إرسال بريد الاستعادة",
-    "resetEmailSentDesc": "تحقق من بريدك للوصول للرابط.",
-    "resetFailed": "تعذر إرسال بريد الاستعادة",
-    "resetFailedTitle": "فشل الاستعادة",
-    "useOtp": "استخدم رمزاً من 6 أرقام",
-    "otpCodeLabel": "رمز تحقق (6 أرقام)",
-    "sendCode": "إرسال الرمز",
-    "resendCode": "إعادة إرسال الرمز",
-    "sendingCode": "جاري الإرسال...",
-    "otpSentTitle": "تم إرسال الرمز",
-    "otpSentDesc": "تحقق من بريدك لرؤية الرمز.",
-    "otpSendFailed": "تعذر إرسال الرمز",
-    "otpSendFailedTitle": "فشل إرسال الرمز",
-    "otpInvalid": "الرمز غير صالح أو منتهي",
-    "otpRequired": "أدخل الرمز ذات الأرقام الستة.",
-    "verifyingCode": "جاري التحقق...",
-    "verifyAndLogin": "تحقق وتسجيل الدخول",
-    "otpLoginSuccess": "تم تسجيل الدخول بالرمز"
   },
   "q": "Q",
   "reports": {
