--- a/studio-app/src/i18n/locales/en.json
+++ b/studio-app/src/i18n/locales/en.json
@@ -66,8 +66,9 @@
     "selectStudentMonthAmount": "Please select a student, month, and enter a valid amount",
     "paymentRecorded": "Payment recorded",
     "paymentRecordedSuccessfully": "Payment recorded successfully",
-    "failedToRecordPayment": "Failed to record payment",
-    "couldNotPreloadData": "Could not preload necessary data",
+    "failedToRecordPayment": "Failed to record payment"
+  },
+  "notifications": {
     "noAccessLink": "No access link",
     "parentPortalLinkNotGenerated": "A parent portal access link has not been generated for this student yet",
     "couldNotGenerateParentLink": "Could not generate parent access link",
@@ -124,16 +125,20 @@
   },
   "auth": {
     "title": "Sign in",
+    "subtitle": "Enter your credentials to access the dashboard",
     "email": "Email",
     "password": "Password",
     "login": "Login",
     "loggingIn": "Logging in...",
     "loginFailed": "Login failed",
     "loginSuccessful": "Logged in successfully",
+    "welcomeBack": "Welcome back!",
     "invalidCredentials": "Invalid credentials",
+    "invalidLoginCredentials": "Email or password is incorrect.",
     "invalidEmail": "Invalid email format",
     "userNotFound": "User not found",
     "wrongPassword": "Incorrect password",
+    "tooManyRequests": "Too many attempts. Please try again later.",
     "forgotPassword": "Forgot password?",
     "backToLogin": "Back to login",
     "sendReset": "Send reset link",
@@ -142,7 +147,32 @@
     "resetEmailSentDesc": "Check your inbox for the reset link.",
     "resetFailed": "Could not send reset email",
     "resetFailedTitle": "Reset failed",
-    "useOtp": "Use a 6-digit code",
+    "noAccount": "Don’t have an account?",
+    "signup": "Sign up here",    "staffSignup": "Staff Account Setup",
+    "staffSignupDescription": "Create a login account for an existing staff member",
+    "workEmail": "Work Email (From Records)",
+    "emailMustMatch": "Must match the email registered in the staff database",
+    "newPassword": "New Password",
+    "confirmPassword": "Confirm Password",
+    "createAccount": "Create Account",
+    "creatingAccount": "Creating account...",
+    "alreadyHaveAccount": "Already have an account?",
+    "error": "Error",
+    "fillAllFields": "Please fill all fields.",
+    "passwordMismatch": "Passwords do not match.",
+    "passwordTooShort": "Password must be at least 6 characters.",
+    "staffNotFound": "No staff member found with this email. Please contact administration.",
+    "accountAlreadyExists": "You already have an account. Please login instead.",
+    "signupSuccessful": "Account created successfully",
+    "canNowLogin": "You can now login with your credentials.",
+    "signupFailed": "Account creation failed",
+    "emailInUse": "This email is already in use. Please login.",
+    "weakPassword": "Password is too weak.",
+    "firebaseNotConfigured": "Firebase authentication is not configured. Please check your environment variables.",
+    "staffProfileNotFound": "No staff profile found for this user. Please contact administration.",
+    "warning": "Warning",
+    "emailNotInDatabase": "Email not found in staff database. Make sure you entered the correct email.",
+    "staffNotAuthorized": "Your account has not been activated yet. Please contact administration.",    "useOtp": "Use a 6-digit code",
     "otpCodeLabel": "6-digit code",
     "sendCode": "Send code",
     "resendCode": "Resend code",
@@ -155,7 +185,12 @@
     "otpRequired": "Enter the 6-digit code.",
     "verifyingCode": "Verifying...",
     "verifyAndLogin": "Verify & login",
-    "otpLoginSuccess": "Signed in with code"
+    "otpLoginSuccess": "Signed in with code",
+    "parentLogin": "Parent login",
+    "parentLoginDescription": "Sign in to view your students",
+    "signIn": "Sign in",
+    "signingIn": "Signing in...",
+    "yourStudents": "Your students"
   },
   "assignments": {
     "cardTitle": "Assignments",
