fix: add missing translation keys for fee structures in settings

--- a/studio-app/src/i18n/locales/ar.json
+++ b/studio-app/src/i18n/locales/ar.json
@@ -166,7 +166,33 @@
       "saveStructure": "حفظ الهيكل",
       "selectGrade": "اختر الصف",
       "structureExists": "هيكل موجود",
-      "structureExistsMessage": "هيكل الرسوم للصف {grade} موجود بالفعل"
+      "structureExistsMessage": "هيكل الرسوم للصف {grade} موجود بالفعل",
+      "feeStructures": {
+        "title": "هياكل الرسوم الدراسية",
+        "academicYearDescription": "حدد الرسوم الشهرية لكل صف للسنة الدراسية {academicYear}.",
+        "academicYear": "السنة الدراسية",
+        "grade": "الصف",
+        "monthlyFeeAmount": "المبلغ الشهري",
+        "addNewStructure": "إضافة هيكل جديد",
+        "addFeeStructure": "إضافة هيكل رسوم",
+        "defineMonthlyFee": "حدد الرسوم الشهرية لمستوى دراسي.",
+        "selectGrade": "اختر الصف",
+        "pleaseSelectGrade": "يرجى اختيار المستوى الدراسي.",
+        "monthlyAmountRequired": "يجب أن يكون المبلغ الشهري رقمًا موجبًا.",
+        "amountMustBePositive": "يجب أن يكون المبلغ رقمًا موجبًا.",
+        "couldNotFetchStructures": "تعذر جلب هياكل الرسوم.",
+        "actions": "الإجراءات",
+        "edit": "تعديل",
+        "editStructure": "تعديل هيكل الرسوم",
+        "updateStructureFor": "تحديث هيكل الرسوم للصف {grade}",
+        "structureSaved": "تم حفظ هيكل الرسوم",
+        "structureSavedMessage": "تم حفظ هيكل الرسوم للصف {grade} بنجاح.",
+        "structureUpdated": "تم تحديث هيكل الرسوم",
+        "structureUpdatedMessage": "تم تحديث هيكل الرسوم للصف {grade} بنجاح.",
+        "errorSavingStructure": "خطأ في حفظ هيكل الرسوم",
+        "errorUpdatingStructure": "خطأ في تحديث هيكل الرسوم",
+        "noStructures": "لم يتم تعريف هياكل رسوم لهذه السنة."
+      }
     },
     "generalSettingsTitle": "الإعدادات العامة للمؤسسة",
     "generalSettingsDescription": "قم بتعديل بيانات المؤسسة والمعلومات الأكاديمية مثل الاسم، العنوان، والسنة الدراسية.",
